--- a/src/main/resources/style/lk.css
+++ b/src/main/resources/style/lk.css
@@ -129,6 +129,15 @@
     background: #BAF3FC;
     border-radius: 15px;}
 
+.table3 {position: absolute;
+    width: 1160px;
+    height: 1432px;
+    margin-left: 80px;
+    top: 558px;
+
+    background: #BAF3FC;
+    border-radius: 15px;}
+
 .table_uch {position: absolute;
     width: 1160px;
     height: 881px;
